--- a/app/src/main/res/layout/local_item_row.xml
+++ b/app/src/main/res/layout/local_item_row.xml
@@ -37,6 +37,13 @@
         android:visibility="gone"/>
 
     <TextView
+        android:id="@+id/quantityText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:visibility="gone"/>
+
+    <TextView
         android:id="@+id/purchaseLocalItemText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
