--- a/app/src/main/res/layout/activity_add_description.xml
+++ b/app/src/main/res/layout/activity_add_description.xml
@@ -25,7 +25,7 @@
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
-        android:hint="@string/describe2"
+        android:hint="@string/describeAdd"
         app:layout_constraintBottom_toTopOf="@+id/guideline22"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -124,7 +124,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:background="@drawable/lightblue_medium_corner_button"
-        android:text="@string/picture"
+        android:text="@string/pictureTake"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/productImage"
         app:layout_constraintEnd_toEndOf="parent"
@@ -142,7 +142,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/lightblue_medium_corner_button"
-        android:text="@string/date"
+        android:text="@string/dateExpire"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/guideline29"
         app:layout_constraintEnd_toEndOf="parent"
