--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -69,7 +69,7 @@
         android:id="@+id/newProdButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/product"
+        android:text="@string/productNew"
         android:textColor="@color/white"
         android:background="@drawable/green_medium_corner_button"
         app:layout_constraintEnd_toStartOf="@+id/guideline15"
