--- a/app/src/main/res/layout/received_item_row.xml
+++ b/app/src/main/res/layout/received_item_row.xml
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:background="@drawable/lightblue_medium_corner_button"
-        android:text="@string/date1"
+        android:text="@string/dateExpireSet"
         android:textSize="15sp"
         android:visibility="gone"
         />
