--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,10 +94,20 @@
             android:id="@+id/suggestionsButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/lightblue_medium_corner_button"
             android:drawableStart="@drawable/ic_baseline_bluetooth_24"
             android:text="@string/suggest"
             android:textColor="@color/white" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/locationsButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/lightblue_medium_corner_button"
+            android:drawableStart="@drawable/ic_baseline_location_on_24"
+            android:text="@string/locations"
+            android:textColor="@color/white"/>
 
     </LinearLayout>
 
@@ -113,7 +123,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.6" />
+        app:layout_constraintGuide_percent="0.65" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline12"
