--- a/app/src/main/res/layout/activity_remove_locations.xml
+++ b/app/src/main/res/layout/activity_remove_locations.xml
@@ -37,6 +37,7 @@
         app:layout_constraintGuide_percent="0.85" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/locationsRecView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline46"
