--- a/app/src/main/res/layout/activity_bluetooth_manager.xml
+++ b/app/src/main/res/layout/activity_bluetooth_manager.xml
@@ -87,4 +87,13 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
 
+    <ProgressBar
+        android:id="@+id/discoverableProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@+id/pairButton"
+        app:layout_constraintTop_toTopOf="@+id/pairButton"
+        android:visibility="gone"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
