--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -60,6 +60,7 @@
         app:layout_constraintTop_toBottomOf="@+id/itemsWatchButton" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/elementsRecView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline54"
