--- a/app/src/main/res/layout/activity_bluetooth_manager.xml
+++ b/app/src/main/res/layout/activity_bluetooth_manager.xml
@@ -47,8 +47,8 @@
         app:layout_constraintStart_toStartOf="@+id/guideline37"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/btDevicesRecView"
+    <ListView
+        android:id="@+id/btDevicesListView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline36"
