--- a/app/src/main/res/layout/activity_bluetooth_manager.xml
+++ b/app/src/main/res/layout/activity_bluetooth_manager.xml
@@ -47,8 +47,8 @@
         app:layout_constraintStart_toStartOf="@+id/guideline37"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ListView
-        android:id="@+id/btDevicesListView"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/btDevicesRecView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline36"
@@ -86,14 +86,5 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
-
-    <ProgressBar
-        android:id="@+id/discoverableProgressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@+id/pairButton"
-        app:layout_constraintTop_toTopOf="@+id/pairButton"
-        android:visibility="gone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
