--- a/app/src/main/res/layout/activity_add_description.xml
+++ b/app/src/main/res/layout/activity_add_description.xml
@@ -22,10 +22,12 @@
         android:id="@+id/descEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
-        android:hint="@string/describeAdd"
+        android:hint="@string/describeHint"
+        android:textColorHint="@color/grey"
         app:layout_constraintBottom_toTopOf="@+id/guideline22"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -84,9 +86,11 @@
         android:id="@+id/nameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="@string/name"
+        android:hint="@string/nameHint"
+        android:textColorHint="@color/grey"
         app:layout_constraintBottom_toTopOf="@+id/guideline6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -95,7 +99,7 @@
         android:id="@+id/nameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/name"
+        android:text="@string/nameHint"
         android:textColor="@color/white"
         android:textSize="32sp"
         android:textStyle="bold|italic"
