--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,9 @@
         android:id="@+id/barcodeText"
         android:layout_width="0dp"
         android:layout_height="@dimen/circleButtonHeight"
-        android:hint="Insert a barcode"
+        android:textColor="@color/white"
+        android:hint="@string/barcodeHint"
+        android:textColorHint="@color/grey"
         android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toStartOf="@+id/cameraButton"
