--- a/app/src/main/res/layout/activity_sign.xml
+++ b/app/src/main/res/layout/activity_sign.xml
@@ -20,24 +20,30 @@
             android:id="@+id/usernameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:ems="10"
-            android:hint="Username"
+            android:hint="@string/usernameHint"
+            android:textColorHint="@color/grey"
             android:inputType="textPersonName" />
 
         <EditText
             android:id="@+id/emailEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:ems="10"
-            android:hint="Email"
+            android:hint="@string/emailHint"
+            android:textColorHint="@color/grey"
             android:inputType="textEmailAddress" />
 
         <EditText
             android:id="@+id/passwordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:ems="10"
-            android:hint="Password"
+            android:hint="@string/passwordHint"
+            android:textColorHint="@color/grey"
             android:inputType="textPassword" />
     </LinearLayout>
 
